--- a/DataStorageManager/DataStorageManager/packages.config
+++ b/DataStorageManager/DataStorageManager/packages.config
@@ -3,6 +3,7 @@
   <package id="Autofac" version="4.1.1" targetFramework="net451" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net451" />
   <package id="Hyak.Common" version="1.0.2" targetFramework="net451" />
+  <package id="Machine.Specifications.Runner.Console" version="0.9.3" targetFramework="net451" />
   <package id="Microsoft.Azure.Common" version="2.0.4" targetFramework="net451" />
   <package id="Microsoft.Azure.Common.Dependencies" version="1.0.0" targetFramework="net451" />
   <package id="Microsoft.Azure.KeyVault" version="1.0.0" targetFramework="net451" />
