--- a/DataStorageManager/DataStorageManager.Integration.Tests/packages.config
+++ b/DataStorageManager/DataStorageManager.Integration.Tests/packages.config
@@ -1,18 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.3.3" targetFramework="net451" />
-  <package id="Hyak.Common" version="1.0.2" targetFramework="net451" />
-  <package id="Machine.Specifications" version="0.11.0" targetFramework="net451" />
+  <package id="Castle.Core" version="4.3.1" targetFramework="net461" />
+  <package id="Hyak.Common" version="1.2.2" targetFramework="net461" />
+  <package id="Machine.Specifications" version="0.12.0" targetFramework="net461" />
   <package id="Machine.Specifications.Should" version="0.11.0" targetFramework="net451" />
-  <package id="Microsoft.Azure.Common" version="2.0.4" targetFramework="net451" />
+  <package id="Microsoft.Azure.Common" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.Azure.Common.Dependencies" version="1.0.0" targetFramework="net451" />
-  <package id="Microsoft.Azure.KeyVault" version="1.0.0" targetFramework="net451" />
-  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net451" />
-  <package id="Microsoft.Azure.KeyVault.Extensions" version="1.0.4" targetFramework="net451" />
+  <package id="Microsoft.Azure.KeyVault" version="3.0.2" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.Cryptography" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.Extensions" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.WebKey" version="3.0.2" targetFramework="net461" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net451" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net451" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net451" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net451" />
-  <package id="Moq" version="4.5.22" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.18" targetFramework="net461" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.18" targetFramework="net461" />
+  <package id="Moq" version="4.10.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net461" />
 </packages>
