--- a/DataStorageManager/DataStorageManager.Tests/packages.config
+++ b/DataStorageManager/DataStorageManager.Tests/packages.config
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.3.3" targetFramework="net451" />
-  <package id="Machine.Specifications" version="0.11.0" targetFramework="net451" />
+  <package id="Castle.Core" version="4.3.1" targetFramework="net451" />
+  <package id="Machine.Specifications" version="0.12.0" targetFramework="net451" />
   <package id="Machine.Specifications.Should" version="0.11.0" targetFramework="net451" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net451" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net451" />
-  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net451" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net451" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net451" />
-  <package id="Moq" version="4.5.22" targetFramework="net451" />
+  <package id="Moq" version="4.10.1" targetFramework="net451" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net451" requireReinstallation="true" />
 </packages>
